# create-project

./: .gitignore  README.md  create_project.ps1  create_project.sh
templates/c/: CMakeLists.txt  README.md
templates/c/source/: main.c
templates/cpp/: CMakeLists.txt  README.md  gitignore
templates/cpp/cmake/: SetVersion.cmake
templates/cpp/source/: main.cpp
templates/cpp/src/: main.cpp
templates/gtest/.github/workflows/: test.yml
templates/gtest/tests/: CMakeLists.txt  tests.cpp
templates/package/.github/workflows/: release.yml
templates/package/cmake/: create_package.cmake  set_version.cmake
templates/rust/: Cargo.toml  README.md  gitignore
templates/rust/github/workflows/: test.yml
templates/uml/: activity-diagram.puml  class-diagram.puml  uml.puml
templates/vcpkg/: gitignore  vcpkg.json.in
templates/vcpkg/cmake/: EnableVcpkg.cmake
